# blaise-slack-alerter

./: .gcloudignore  .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: tests.yaml
lib/: __init__.py  alerter.py  send_alert.py  send_alerts.py  slack_alerts.py
lib/cloud_functions/: __init__.py  invalid_cloud_function_event.py  parse_event.py
lib/cloud_logging/: __init__.py  log_entry.py  log_query_link.py  parse_log_entry.py
lib/cloud_run_revision/: __init__.py  event.py  invalid_cloud_run_revision_event.py  parse_event.py
lib/filters/: agent_connect_filter.py  all_preprod_alerts_except_erroneous_questionnaire_filter.py  all_preprod_and_training_alerts_except_erroneous_questionnaire_filter.py  auditlog_filter.py  bootstrapper_filter.py  execute_sql_filter.py  fluent_bit_maintenance_filter.py  gcp_constraint_not_found_filter.py  generic_not_found_filter.py  get_role_filter.py  invalid_login_attempt_filter.py  ip_space_exhausted_filter.py  no_instance_filter.py  os_patch_maintenance_filter.py  osconfig_agent_filter.py  paramiko_filter.py  permission_denied_by_iam_filter.py  requested_entity_was_not_found_filter.py  rproxy_lookupEffectiveGuestPolicies_filter.py  sandbox_filter.py  scc_dormant_accounts_alert_filter.py  scc_dormant_accounts_prod_alert_filter.py  service_account_key_filter.py  socket_exception_filter.py  watching_metadata_invalid_character_filter.py
lib/log_processor/: __init__.py  app_log_payload.py  app_log_payload_factories.py  process_log_entry.py  processed_log_entry.py  utilities.py
lib/log_processor/log_types/: audit_log.py  cloud_function.py  cloud_run_revision.py  gae_app.py  gce_instance.py  json_payload.py  text_payload.py  unknown_payload.py
lib/slack/: __init__.py  alerter.py  send_slack_message.py  slack_alert_failed.py  slack_alerter.py  slack_message.py  slack_message_formatter.py
lib/utilities/: friday_maintenance_window.py  log_validation.py  weekly_maintenance_window.py
tests/: conftest.py  test_main.py
tests/lib/: test_log_processor.py  test_send_alerts.py  test_slack_alert.py
tests/lib/cloud_functions/: test_parse_event.py
tests/lib/cloud_logging/: test_log_query_link.py  test_parse_log_entry.py
tests/lib/filters/: test_auditlog_filter.py  (+26 more)
(+18 files in other folders)
