[tool.poetry]
name = "blaise-slack-alerter"
version = "0.1.0"
description = ""
authors = ["Tom Oram <tom.oram@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
google-cloud-logging = "^3.2.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
requests-mock = "^1.9.3"
types-requests = "^2.28.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
