[tool.poetry]
name = "blaise_slack_alerter"
version = "0.1.0"
description = ""
authors = ["Tom Oram <tom.oram@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.0"
google-cloud-logging = "^3.11.4"
requests = "^2.32.3"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
types-pytz = "^2023.3.0.0"
urllib3 = "1.26.19"
certifi = "2023.7.22"
grpcio = "1.68.1"
jinja2 = "3.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"
requests-mock = "^1.12.1"
types-requests = "^2.28.3"
pytest-cov = "^3.0.0"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
