[tool.poetry]
package-mode = false
name = "blaise_slack_alerter"
version = "0.1.0"
description = ""
authors = ["Blaise Team"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^3.1.0"
google-cloud-logging = "^3.11.4"
requests = "^2.32.3"
python-dateutil = "^2.8.2"
pytz = "^2025.2"
types-pytz = "^2025.2.0.20250809"
urllib3 = "2.5.0"
certifi = "2025.8.3"
grpcio = "1.74.0"
jinja2 = "3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
mypy = "^1.17.1"
requests-mock = "^1.12.1"
types-requests = "^2.28.3"
pytest-cov = "^6.3.0"
types-python-dateutil = "^2.8.19"
flask = "^3.1.2"
pytz = "^2025.2"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
